--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,25 @@
-<style>
-  body {
-    background-color: #3F3F3F;}
-</style>
-<body>
-  <div *ngIf="shouldShowControls()">
-    <div class="search-container">
-      <input type="text" [(ngModel)]="searchQuery" placeholder="Search for a book..." class="search-input"/>
-      <button (click)="searchBooks()" class="search-button">Search</button>
-      <button (click)="goToBookList()" class="back-to-booklist-button">Home</button>
-      <button (click)="goToBookList()" class="back-to-booklist-button">User</button>
-      <button (click)="goToAllBooks()" class="back-to-booklist-button">Books</button>
+<link rel="stylesheet" href="app.component.css">
+  <script src="app.component.js"></script>
+  <body>
+    <div *ngIf="shouldShowControls()">
+      <div id="left-menu" class="left-menu">
+        <button (click)="goToBookList()" id="home-button" class="home-button">Home</button>
+        <button (click)="goToAllBooks()" id="book-button" class="book-button">Books</button>
+        <button (click)="goToHistory()" id="history-button" class="history-button">History</button>
+      </div>
+      <div class="top-menu">
+        <button onclick="leftMenuToggleButton()" id="leftMenuToggleButton" style="cursor:pointer; background:none; color:white; font-size:1cm; margin-left:0.35cm; border:none;">
+          ☰
+        </button>
+        <div class="search-container">
+          <button (click)="goToBackPage()" class="back-button"></button>
+          <input type="search" [(ngModel)]="searchQuery" placeholder="Search for a book..." id="search-input" class="search-input"/>
+          <button (click)="searchBooks()" class="search-button"></button>
+          <button (click)="goToFilterPage()" class="filter-button">Filter</button>
+        </div>
+        <button (click)="goToWishList()" class="wishlist-button">Wishlist</button>
+        <button (click)="goToUserProfile()" class="user-profile-button">User</button>
+      </div>
     </div>
-  </div>
-</body>
-<router-outlet></router-outlet>
+  </body>
+  <router-outlet></router-outlet>
