--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -52,27 +52,24 @@ button {
   display: flex;
   align-items: center;
   gap: 10px; /* Space between buttons */
+  padding-right: 20px; /* Padding to ensure buttons don't overflow */
 }
 
 .wishlist-button,
 .user-profile-button {
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 50%;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  background-color: #515151;
+  border: none;
   color: white;
-  font-size: 1.2rem;
+  border-radius: 25px;
+  padding: 10px 20px;
+  font-size: 0.9rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
 }
 
-.wishlist-button {
-  background-color: #ffbb00;
-}
-
-.user-profile-button {
-  background-color: #ff6600;
+.wishlist-button:hover,
+.user-profile-button:hover {
+  background-color: #3f3f3f;
 }
 
 .menu-toggle-button {
