--- a/src/app/components/book-detail/book-detail.component.html
+++ b/src/app/components/book-detail/book-detail.component.html
@@ -31,7 +31,11 @@
 
     <div class="comments-section">
       <h3>Comments</h3>
-  
+      <h3>Post a Comment</h3>
+      <form (ngSubmit)="submitComment()">
+        <textarea [(ngModel)]="newComment" name="comment" rows="4" placeholder="Write your comment here..." required></textarea>
+        <button type="submit">Submit Comment</button>
+      </form>
       <div *ngIf="comments$ | async as comments; else noComments" class="comments-list">
         <div *ngFor="let comment of comments" class="comment-card">
           <div class="comment-header">
