--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -20,7 +20,7 @@
                 </div>
                 <div class="button-group">
                     <button type="submit" class="login-button">Login</button>
-                    <a routerLink="/register" class="register-link">Register</a>
+                    <a routerLink="/register-page" class="register-link">Register</a>
                 </div>
                 <div class="login-message">{{loginMessage}}</div>
             </form>
