--- a/src/app/components/add-publisher/add-publisher.component.html
+++ b/src/app/components/add-publisher/add-publisher.component.html
@@ -13,7 +13,7 @@
         <input type="file" id="file-input" (change)="onFileChange($event)" accept="image/*" />
     </label><br><br>
 
-    <button type="submit" (click)="submit()">submit</button><br><br>
+    <button type="submit" (click)="submit($event)">submit</button><br><br>
 
     <div *ngIf="noti_succes" class="alert">
         <span class="closebtn" (click)="noti_succes = false;">&times;</span>
