--- a/src/app/components/user-setting/reimg/reimg.component.html
+++ b/src/app/components/user-setting/reimg/reimg.component.html
@@ -2,10 +2,10 @@
     <h3>Change Image</h3>
 </div>
 <div class="text-box">
-    <input type="img" [(ngModel)]="newimg" placeholder="Enter your img link"><br>
-    <input type="password" [(ngModel)]="confrimePass" placeholder="Enter confrime password"><br>
+    <input type="img" [(ngModel)]="newimg" placeholder="Enter your imgage link"><br>
+    <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your password"><br>
 </div>
-<button (click)="update()" class="button">Update</button>
+<button (click)="update($event)" class="button">Update</button>
 <div *ngIf="noti_succes" class="alert">
     <span class="closebtn" (click)="noti_succes = false;">&times;</span>
     Update successful.
