--- a/src/app/components/user-setting/repassword/repassword.component.html
+++ b/src/app/components/user-setting/repassword/repassword.component.html
@@ -3,10 +3,10 @@
 </div>
 <div class="text-box">
     <input type="password" [(ngModel)]="newPassword" placeholder="Enter your new password"><br>
-    <input type="password" [(ngModel)]="confrimeNewPassword" placeholder="Enter your confrime new password"><br>
-    <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your confrime password"><br>
+    <input type="password" [(ngModel)]="confrimeNewPassword" placeholder="Confirm new password"><br>
+    <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your old password"><br>
 </div>
-<button (click)="update()" class="button">Update</button>
+<button (click)="update($event)" class="button">Update</button>
 <div *ngIf="noti_succes" class="alert">
     <span class="closebtn" (click)="noti_succes = false;">&times;</span>
     Update successful.
