--- a/src/app/components/add-author/add-author/add-author.component.html
+++ b/src/app/components/add-author/add-author/add-author.component.html
@@ -15,7 +15,7 @@
     <!-- input  author descrip -->
     <input class="texin" type="text" [(ngModel)]="author_description" placeholder="Enter author description"><br><br>
 
-    <button type="submit" (click)="submit()">submit</button><br><br>
+    <button type="submit" (click)="submit($event)">submit</button><br><br>
 
     <div *ngIf="noti_succes" class="alert">
         <span class="closebtn" (click)="noti_succes = false;">&times;</span>
