--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -64,14 +64,14 @@ button {
 }
 
 .user-profile-button {
-  background-color: #515151;
-  border: none;
-  color: white;
-  border-radius: 25px;
-  padding: 10px 20px;
-  font-size: 0.9rem;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  background-color: 515151; /* Optional: makes the button background transparent */
+  border-radius: 25px; /* Removes the button border */
   cursor: pointer;
-  transition: background-color 0.3s ease;
+  font-size: 16px;
+  color: #333; /* Text color */
 }
 
 .user-profile-button:hover {
