--- a/src/app/components/edit-book/edit-book.component.html
+++ b/src/app/components/edit-book/edit-book.component.html
@@ -92,5 +92,6 @@
         <button class="button" type="submit" (click)="submit($event)">Update</button><br><br>
 
     </div>
+    {{message}}
 
 </div>
