--- a/src/app/components/user-setting/repassword/repassword.component.html
+++ b/src/app/components/user-setting/repassword/repassword.component.html
@@ -7,3 +7,4 @@
     <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your old password"><br>
 </div>
 <button (click)="update($event)" class="button">Update</button>
+{{message}}
