--- a/src/app/components/user-setting/reimg/reimg.component.html
+++ b/src/app/components/user-setting/reimg/reimg.component.html
@@ -6,3 +6,4 @@
     <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your password"><br>
 </div>
 <button (click)="update($event)" class="button">Update</button>
+{{message}}
