--- a/src/app/components/user-setting/rename/rename.component.html
+++ b/src/app/components/user-setting/rename/rename.component.html
@@ -5,5 +5,5 @@
     <input type="text" [(ngModel)]="newname" placeholder="Enter your new username"><br>
     <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your password"><br>
 </div>
-<button (click)="update($event)" class="button">Update</button>
+<button (click)="update($event)" class="button">Update</button><br>
 {{message}}
