--- a/src/app/components/user-setting/repassword/repassword.component.html
+++ b/src/app/components/user-setting/repassword/repassword.component.html
@@ -6,5 +6,5 @@
     <input type="password" [(ngModel)]="confrimeNewPassword" placeholder="Confirm new password"><br>
     <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your old password"><br>
 </div>
-<button (click)="update($event)" class="button">Update</button>
+<button (click)="update($event)" class="button">Update</button><br>
 {{message}}
