--- a/src/app/components/user-setting/redescription/redescription.component.html
+++ b/src/app/components/user-setting/redescription/redescription.component.html
@@ -5,5 +5,5 @@
     <textarea type="text" [(ngModel)]="newimg" placeholder="Enter your new Description"></textarea><br>
     <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your password"><br>
 </div>
-<button (click)="update($event)" class="button">Update</button>
+<button (click)="update($event)" class="button">Update</button><br>
 {{message}}
