--- a/src/app/components/user-setting/reemail/reemail.component.html
+++ b/src/app/components/user-setting/reemail/reemail.component.html
@@ -5,5 +5,5 @@
     <input type="email" [(ngModel)]="newEmail" placeholder="Enter your new email"><br>
     <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your password"><br>
 </div>
-<button (click)="update($event)" class="button">Update</button>
+<button (click)="update($event)" class="button">Update</button><br>
 {{message}}
