--- a/src/app/components/user-setting/reimg/reimg.component.html
+++ b/src/app/components/user-setting/reimg/reimg.component.html
@@ -5,5 +5,5 @@
     <input type="img" [(ngModel)]="newimg" placeholder="Enter your imgage link"><br>
     <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your password"><br>
 </div>
-<button (click)="update($event)" class="button">Update</button>
+<button (click)="update($event)" class="button">Update</button><br>
 {{message}}
