--- a/src/app/components/user-setting/rephone/rephone.component.html
+++ b/src/app/components/user-setting/rephone/rephone.component.html
@@ -5,5 +5,5 @@
     <input type="text" [(ngModel)]="newPhone" placeholder="Enter your new phone number"><br>
     <input type="password" [(ngModel)]="confrimePass" placeholder="Enter your password"><br>
 </div>
-<button (click)="update($event)" class="button">Update</button>
+<button (click)="update($event)" class="button">Update</button><br>
 {{message}}
