fix unknow problem

--- a/src/app/components/add-book/add-book.component.html
+++ b/src/app/components/add-book/add-book.component.html
@@ -104,7 +104,7 @@
         </div>
 
         <button class="button" type="submit" (click)="submit($event)">submit</button><br><br>
-
+        {{message}}
     </div>
 
 </div>
