--- a/src/app/components/add-author/add-author/add-author.component.html
+++ b/src/app/components/add-author/add-author/add-author.component.html
@@ -12,5 +12,6 @@
 
     <input class="texin" type="text" [(ngModel)]="author_description" placeholder="Enter author description"><br><br>
 
-    <button type="submit" (click)="submit($event)">submit</button><br><br>
+    <button type="submit" (click)="submit($event)">submit</button><br>
+    {{message}}
 </div>
